<resources>
    <string name="app_name">Home</string>
    <string name="appname">REDWINGS</string>
    <string name="acc">Bring a Life, Back to Power</string>
    <string name="donor">Blood Donor</string>
    <string name="patient">Patient</string>
    <string name="banks">Blood Bank</string>
    <string name="campaign">Organization</string>
    <string name="login">LOGIN</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="forgot_pw">FORGOT PASSWORD?</string>
    <string name="create_acc">Create an Account</string>
    <string name="signup">SIGNUP</string>
    <string name="welcome">..WELCOME..</string>
    <string name="bl_regist">BLOOD BANK REGISTRATION</string>
    <string name="bl_name">Blood Bank Name</string>
    <string name="address">Address</string>
    <string name="ph_num">Phone Number</string>
    <string name="District">District</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="u_name">Username</string>
    <string name="re_pwd">Re- Type Password</string>
    <string name="reg">REGISTER</string>
    <string name="add_Bl_tst">ADD BLOOD TEST</string>
    <string name="hs_name">Hospital Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_bl_test">SELECT BLOOD TEST</string>
    <string name="test_name1">Typing Test : ABO group</string>
    <string name="test_name2">Hepatitis viruses B and C Test</string>
    <string name="test_name3">Human immunodeficiency virus (HIV)</string>
    <string name="test_name4">Human T-lymphotropic viruses (HTLV) I and II Test</string>
    <string name="test_name5">Syphilis Test</string>
    <string name="test_name6">West Nile virus Test</string>
    <string name="test_name7">Chagas disease Test</string>
    <string name="save">SAVE DETAILS</string>
    <string name="hospital_name1">Lanka Hospital - Colombo</string>
    <string name="date1">2021-05-13</string>
    <string name="time1">8.00am - 2.00pm</string>
    <string name="update_test_details">UPDATE BLOOD TEST</string>
    <string name="description">Description</string>
    <string name="add_notice">ADD EMERGENCY NOTICE</string>
    <string name="update_emg_notices">UPDATE EMERGENCY NOTICE</string>
    <string name="number">0714585692</string>
    <string name="des1">We need O+ and A- type blood donors immediately</string>
    <string name="view_details_cus">VIEW BLOOD TEST DETAILS</string>
    <string name="hospital_name2">Nawaloka Hospital - Colombo</string>
    <string name="date2">2021-05-24</string>
    <string name="time2">9.00am - 4.00pm</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="uname">User name</string>
    <string name="bloodBank">BLOOD BANK</string>
    <string name="view_notices">VIEW EMERGENCY NOTICES</string>
    <string name="create_account">Do not have an account?</string>
    <string name="view_blood_banks">BLOOD BANKS</string>
    <string name="bloodbanks">BLOOD BANKS</string>
    <string name="emergencyNotices">Emergency Notices</string>
    <string name="bloodTests">BLOOD TESTS</string>
    <string name="skip">SKIP</string>
    <string name="blood_tests">Blood Tests</string>

</resources>